# dstft

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  coverage.xml  coverage_missing.txt  coverage_report.txt  environment.yml  final_coverage.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
data/: N21.mat  N22.mat  fan_flutter.mat  x_vitesse.mat  x_vitesse2.mat
docs/: Makefile  api.rst  citation.rst  conf.py  dstft.rst  getting_started.rst  index.rst  installation.rst  modules.rst  notebooks.rst  requirements.txt
docs/_autosummary/: dstft.adstft.rst  dstft.base.rst  dstft.dstft.rst  dstft.rst  dstft.visualization.rst  dstft.windows.rst
docs/source/: dstft.rst  index.rst  modules.rst
dstft/: __init__.py  dstft.py  loss.py  optim.py  synchrosqueeze.py  tracking.py
notebooks/: 0_.ipynb  1.ipynb  1_tf_varying_window_length.ipynb  1_tf_varying_window_length2.ipynb  2_tf_varying_window_length.ipynb  3_time_varying_window_and_hop_length.ipynb  4_time_varying_window_and_hop_length.ipynb  4_tracking_frequency.ipynb  5_time_varying_window_and_hop_length.ipynb  6_time_varying_window_and_hop_length.ipynb  7_time_varying_window_and_hop_length.ipynb  8_fan2.ipynb  SST_example.ipynb  Speed_estimation.ipynb  idstft.ipynb  illustration.ipynb  inverse.ipynb  runtime1.ipynb  sst.ipynb  test.ipynb  tf_varying_window_length2.ipynb  time_and_frequency_varying_window_length.ipynb  time_varying_window_and_hop_length.ipynb
src/dstft/: __init__.py  _core.py  adstft.py  base.py  dstft.py  visualization.py  windows.py
tests/: __init__.py  test_adstft_inverse.py  test_base_stft.py  test_dstft.py
