[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dstft"
version = "3.0.0"
authors = [{ name = "Maxime Leiber" }]
description = "Differentiable Short-Time Fourier Transform (DSTFT) for PyTorch"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.10"
dependencies = ["torch>=2.1", "matplotlib", "torchaudio"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/maxime-leiber/dstft"
Documentation = "https://dstft.readthedocs.io"
Issues = "https://github.com/maxime-leiber/dstft/issues"


[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
    "nbsphinx>=0.9",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "--disable-warnings"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E203", # whitespace before ':' (not compatible with ruff format)
    "E501", # line length (handled case-by-case)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"] # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG"]        # Allow unused arguments in tests
"src/dstft/_core.py" = ["ARG"]   # Core kernels accept a common signature

[tool.ruff.lint.isort]
known-first-party = ["dstft"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
