[metadata]
name = dstft
version = attr: dstft.__version__
description = Differentiable short-time Fourier transform
author = maxime-leiber
author_email = maxime.leiber0@gmail.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
